[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=63",
]

[project]
name = "modepy"
version = "2024.1"
description = "Modes and nodes for high-order methods"
readme = "README.rst"
license = { text = "MIT" }
authors = [
    { name = "Andreas Kloeckner", email = "inform@tiker.net" },
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "numpy",
    "pymbolic",
    "pytools",
]

[project.optional-dependencies]
doc = [
    "furo",
    "sphinx>=4",
    "sphinx-copybutton",
]
test = [
    "mypy",
    "pytest",
    "ruff",
]

[project.urls]
Documentation = "https://documen.tician.de/modepy"
Homepage = "https://mathema.tician.de/software/modepy"
Repository = "https://github.com/inducer/modepy"

[tool.setuptools.packages.find]
include = [
    "modepy*",
]

[tool.setuptools.package-dir]
# https://github.com/Infleqtion/client-superstaq/pull/715
"" = "."

[tool.setuptools.package-data]
modepy = [
    "py.typed",
]

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "Q",   # flake8-quotes
    "W",   # pycodestyle
    "RUF",
    "UP",
]

extend-ignore = [
    "C90",  # McCabe complexity
    "E221", # multiple spaces before operator
    "E226", # missing whitespace around arithmetic operator
    "E241", # multiple spaces after comma
    "E242", # tab after comma
    "E402", # module level import not at the top of file
    "N818", # error suffix in exception names
]
allowed-confusables = ["‐", "–"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"modepy/quadrature/jaskowiec_sukumar_tet_data.py" = ["E202", "E203"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
    "pytools",
    "pymbolic",
]
known-local-folder = [
    "modepy",
]
lines-after-imports = 2

[tool.mypy]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "pymbolic.*",
    "pytest.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.typos.default]
extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker:\\s*disable-line$"
]

[tool.typos.default.extend-words]
# French paper title
sur = "sur"
# The polynomial space
pn = "pn"
# nd like n-dimensional
nd = "nd"
# SIAM abbreviated journal title
numer = "numer"

"dependees" = "dependees"

[tool.typos.files]
extend-exclude = [
]
