[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "modepy"
version = "2025.2"
description = "Modes and nodes for high-order methods"
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Andreas Kloeckner", email = "inform@tiker.net" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "numpy",
    "pymbolic>=2024.2",
    "pytools",
    # for Never
    "typing_extensions>=4.1",
]

[project.optional-dependencies]
doc = [
    "furo",
    "sphinx>=4",
    "sphinx-copybutton",
]
test = [
    "basedpyright",
    "pytest",
    "ruff",
]

[project.urls]
Documentation = "https://documen.tician.de/modepy"
Homepage = "https://mathema.tician.de/software/modepy"
Repository = "https://github.com/inducer/modepy"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.git*",
  "/doc/_build",
  "/.editorconfig",
  "/run-*.sh",
  "/.basedpyright",
]

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "Q",   # flake8-quotes
    "PGH", # pygrep-hooks
    "RUF", # ruff
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle
    "TC",
]
extend-ignore = [
    "C90",  # McCabe complexity
    "E221", # multiple spaces before operator
    "E226", # missing whitespace around arithmetic operator
    "E241", # multiple spaces after comma
    "E242", # tab after comma
    "E402", # module level import not at the top of file
    "N818", # error suffix in exception names
]
allowed-confusables = ["‐", "–"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"modepy/quadrature/jaskowiec_sukumar_tet_data.py" = ["E202", "E203"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
    "pytools",
    "pymbolic",
]
known-local-folder = [
    "modepy",
]
lines-after-imports = 2
required-imports = ["from __future__ import annotations"]

[tool.typos.default]
extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker:\\s*disable-line$"
]

[tool.typos.default.extend-words]
# French paper title
sur = "sur"
# The polynomial space
pn = "pn"
# nd like n-dimensional
nd = "nd"
# written out 0d
zerod = "zerod"

[tool.typos.files]
extend-exclude = []

[tool.basedpyright]
reportImplicitStringConcatenation = "none"
reportUnnecessaryIsInstance = "none"
reportUnusedCallResult = "none"
reportExplicitAny = "none"

# This reports even cycles that are qualified by 'if TYPE_CHECKING'. Not what
# we care about at this moment.
# https://github.com/microsoft/pyright/issues/746
reportImportCycles = "none"
pythonVersion = "3.10"
pythonPlatform = "All"

ignore = [
    "contrib",
    "doc",
]

[[tool.basedpyright.executionEnvironments]]
root = "test"
reportUnknownArgumentType = "hint"

